resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: client-ingress
  namespace: team-6
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}, {"HTTPS":443}]' # 이후 변경이 필요하면 변경하기
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:686710509719:certificate/0eb3817e-1cbc-4397-b9cf-b91affd1bf00
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type": "redirect", "RedirectConfig": { "Protocol": "HTTPS", "Port": "443", "StatusCode": "HTTP_301"}}'
    alb.ingress.kubernetes.io/tags: Service=argocd-server,Role=LB
  labels:
    app: client-ingress
spec:
  rules:
  - host: "team-6.shinhansec-pda.net" # 사용할 도메인 -> 이후 사용 시 client.team-6과 같이 수정
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: client-service
            port:
              number: 80
